--- a/openttd.cfg
+++ b/openttd.cfg
@@ -47,7 +47,7 @@ max_loan = 500000
 initial_interest = 2
 vehicle_costs = 0
 competitor_speed = 2
-vehicle_breakdowns = 0
+vehicle_breakdowns = 1
 subsidy_multiplier = 2
 construction_cost = 0
 terrain_type = 0
@@ -56,8 +56,8 @@ economy = 0
 line_reverse_mode = false
 disasters = false
 town_council_tolerance = 0
-[5~line_reverse_mode = 0]
-disasters = 0
+line_reverse_mode = false
+disasters = false
 town_council_tolerance = 0
 diff_level = 3
 
@@ -158,9 +158,9 @@ fund_roads = true
 give_money = true
 smooth_economy = true
 allow_shares = true
-town_growth_rate = 3
-larger_towns = 2
-initial_city_size = 10
+town_growth_rate = 2
+larger_towns = 4
+initial_city_size = 2
 mod_road_rebuild = true
 dist_local_authority = 20
 town_noise_population = 800,2000,4000
@@ -172,7 +172,7 @@ town_noise_population[2] = 4000
 infrastructure_maintenance = false
 
 [pf]
-forbid_90_deg = false
+forbid_90_deg = true
 roadveh_queue = true
 pathfinder_for_trains = 2
 pathfinder_for_roadvehs = 2
@@ -257,7 +257,7 @@ script_max_opcode_till_suspend = 10000
 settings_profile = easy
 
 [locale]
-currency = CHF
+currency = USD
 units = metric
 digit_group_separator = 
 digit_group_separator_currency = 
@@ -272,7 +272,7 @@ units_height = metric
 [gui]
 advanced_vehicle_list = 2
 ai_developer_tools = false
-auto_euro = true
+auto_euro = false
 autorenew = true
 autorenew_money = 100000
 autorenew_months = 6
