difficulty, no planes

--- a/openttd.cfg
+++ b/openttd.cfg
@@ -41,8 +41,8 @@ gui_zoom = 2
 
 [difficulty]
 max_no_competitors = 0
-number_towns = 3
-industry_density = 5
+number_towns = 2
+industry_density = 3
 max_loan = 300000
 initial_interest = 2
 vehicle_costs = 0
@@ -52,14 +52,14 @@ subsidy_multiplier = 2
 construction_cost = 0
 terrain_type = 0
 quantity_sea_lakes = 0
-economy = 0
+economy = false
 line_reverse_mode = false
 disasters = false
 town_council_tolerance = 0
 line_reverse_mode = false
 disasters = false
 town_council_tolerance = 0
-diff_level = 2
+diff_level = 3
 
 [game_creation]
 town_name = norwegian
@@ -90,7 +90,7 @@ mammoth_trains = true
 never_expire_vehicles = true
 max_trains = 5000
 max_roadveh = 5000
-max_aircraft = 5000
+max_aircraft = 0
 max_ships = 5000
 roadveh_acceleration_model = 0
 train_slope_steepness = 3
@@ -423,7 +423,7 @@ renew_keep_length = false
 [bans]
 
 [news_display]
-arrival_player = off
+arrival_player = full
 arrival_other = off
 accident = full
 company_info = summarized
@@ -476,7 +476,7 @@ demand_size = 100
 short_path_saturation = 80
 
 [sound]
-news_ticker = true
+news_ticker = false
 news_full = true
 new_year = true
 confirm = true
