--- a/openttd.cfg
+++ b/openttd.cfg
@@ -41,9 +41,9 @@ gui_zoom = 2
 
 [difficulty]
 max_no_competitors = 0
-number_towns = 2
+number_towns = 1
 industry_density = 3
-max_loan = 300000
+max_loan = 250000
 initial_interest = 2
 vehicle_costs = 0
 competitor_speed = 2
@@ -70,12 +70,12 @@ land_generator = 1
 oil_refinery_limit = 32
 tgen_smoothness = 1
 variety = 2
-generation_seed = 1071871388
+generation_seed = 3956651971
 tree_placer = 2
 heightmap_rotation = 0
 se_flat_world_height = 1
-map_x = 10
-map_y = 10
+map_x = 8
+map_y = 8
 water_borders = 16
 custom_town_number = 3
 custom_sea_level = 2
@@ -257,7 +257,7 @@ script_max_opcode_till_suspend = 10000
 settings_profile = easy
 
 [locale]
-currency = USD
+currency = NOK
 units = metric
 digit_group_separator = 
 digit_group_separator_currency = 
@@ -423,8 +423,8 @@ renew_keep_length = false
 [bans]
 
 [news_display]
-arrival_player = full
-arrival_other = off
+arrival_player = summarized
+arrival_other = summarized
 accident = full
 company_info = summarized
 open = summarized
